--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -2,52 +2,58 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CustomControlsLibrary">
 
-    <Style TargetType="Button" x:Key="TextButtonStyle">
+    <Style TargetType="Button" x:Key="CustomTextButton">
         <Setter Property="Background" Value="LightGray"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Padding" Value="10"/>
+        <Setter Property="Padding" Value="10,5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border Background="{TemplateBinding Background}" 
-                            BorderBrush="Gray" 
-                            BorderThickness="1" 
-                            CornerRadius="5">
+                        CornerRadius="5">
                         <ContentPresenter HorizontalAlignment="Center" 
-                                          VerticalAlignment="Center"/>
+                                      VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-
-    <Style TargetType="Button" x:Key="ImageButtonStyle">
+    <Style TargetType="Button" x:Key="CustomImageButton">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Image Source="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Tag}" 
-                           Width="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=TagWidth}" 
-                           Height="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=TagHeight}" 
-                           Stretch="Uniform"/>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style TargetType="ScrollViewer" x:Key="CustomScrollViewerStyle">
-        <Setter Property="Background" Value="White"/>
-        <Setter Property="BorderBrush" Value="Gray"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="ScrollViewer">
                     <Grid>
-                        <ScrollContentPresenter/>
+                        <Image Source="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Tag}" 
+                           Stretch="Uniform" 
+                           Width="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Width}" 
+                           Height="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Height}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+    <Style TargetType="ScrollViewer" x:Key="CustomScrollViewer">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ScrollViewer">
+                    <Grid>
+                        <ScrollContentPresenter x:Name="PART_ScrollContentPresenter"/>
+                        <ScrollBar x:Name="PART_VerticalScrollBar" 
+                                Background="{TemplateBinding Background}" 
+                                Foreground="{TemplateBinding Foreground}" 
+                                Width="10" 
+                                Orientation="Vertical"/>
+                        <ScrollBar x:Name="PART_HorizontalScrollBar" 
+                                Background="{TemplateBinding Background}" 
+                                Foreground="{TemplateBinding Foreground}" 
+                                Height="10" 
+                                Orientation="Horizontal"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 
 </ResourceDictionary>
